<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="welcome_to_app">Welcome to app</string>
    <string name="have_a_nice_day">Have a nice day</string>
    <string name="key_AC">AC</string>
    <string name="key_znak">+/-</string>
    <string name="key_proc">%</string>
    <string name="key_del">/</string>
    <string name="key_mnozh">*</string>
    <string name="key_min">-</string>
    <string name="key_ravno">=</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_zap">,</string>
    <string name="key_plus">+</string>





</resources>